Add citizen_msg codec

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,11 +5,13 @@ pkgconfig_DATA = libhello_zproto.pc
 
 include_HEADERS = \
     ../include/hello_zproto.h \
-    ../include/hello_zproto_msg.h
+    ../include/hello_zproto_msg.h \
+    ../include/citizen_msg.h
 
 libhello_zproto_la_SOURCES = \
     platform.h \
-    hello_zproto_msg.c
+    hello_zproto_msg.c \
+    citizen_msg.c
 
 AM_CFLAGS = -g
 AM_CPPFLAGS = -I$(top_srcdir)/include
@@ -21,5 +23,5 @@ TESTS = hello_zproto_selftest
 
 # Produce generated models; do this manually in src directory
 code:
-	gsl -q hello_zproto_msg.xml
+	gsl -q hello_zproto_msg.xml citizen_msg.xml
 
